--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,11 +16,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cml runner \
+          cml runner --single \
               --cloud=aws \
               --cloud-region=eu-west \
               --cloud-type=t2.micro
-              --single
   train-model:
     needs: deploy-runner
     runs-on: [self-hosted]
