Try medium machine with single use flag

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,7 +19,8 @@ jobs:
           cml runner --single \
               --cloud=aws \
               --cloud-region=eu-west \
-              --cloud-type=t2.micro
+              --cloud-type=m \
+              --cloud-gpu=nogpu \
   train-model:
     needs: deploy-runner
     runs-on: [self-hosted]
