--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,8 +19,7 @@ jobs:
           cml runner \
               --cloud=aws \
               --cloud-region=eu-west \
-              --cloud-type=m \
-              --cloud-gpu=nogpu \
+              --cloud-type=t2.micro
               --single
   train-model:
     needs: deploy-runner
