--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -20,7 +20,7 @@ jobs:
           cml runner \
               --cloud=aws \
               --cloud-region=eu-west \
-              --cloud-type=t2.micro
+              --cloud-type=m
               --single
   train-model:
     needs: deploy-runner
