Incorporate feedback Casper on CML flow

--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -35,20 +35,14 @@ jobs:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
+          cml ci
           pip install -r requirements.txt
-          python get_data.py
           python train.py
 
-          # Create CML report
-          cat model/metrics.txt >> model/report.md
-          cml publish model/confusion_matrix.png --md >> model/report.md
-          cml send-comment model/report.md
-
           # Connect to your DVC remote storage and push the model to there
-
           dvc add model/random_forest.joblib # This automatically adds the model to your .gitignore
 
-          # GDRIVE_CREDENTIALS_DATA appears not to be read automatically
+          # GDRIVE_CREDENTIALS_DATA is not read automatically when using a service account
           # Manually write it to creds.json and read that file
           echo -E '${{ secrets.GDRIVE_CREDENTIALS_DATA }}' > creds.json
 
@@ -63,4 +57,9 @@ jobs:
           rm creds.json
 
           # Create pull request for the remaining files
-          cml pr "."
+          cml pr .
+
+          # Create CML report
+          cat model/metrics.txt > model/report.md
+          cml publish model/confusion_matrix.png --md >> model/report.md
+          cml send-comment --pr --update report.md
