--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -33,14 +33,14 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
+          cml ci
           pip install -r requirements.txt
-          python get_data.py
           python train.py
 
-          # Create CML report
-          cat model/metrics.txt >> model/report.md
-          cml publish model/confusion_matrix.png --md >> model/report.md
-          cml send-comment model/report.md
-
           # Create pull request
-          cml pr "."
+          cml pr .
+
+          # Create CML report
+          cat model/metrics.txt > report.md
+          cml publish model/confusion_matrix.png --md >> report.md
+          cml send-comment --pr --update report.md
