--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -1,4 +1,4 @@
-name: CML-with-DVC
+name: CML with DVC
 on: # Here we use three triggers; on push, on manual trigger, and daily at 08:00
   # push:
   workflow_dispatch:
@@ -19,12 +19,13 @@ jobs:
         run: |
           cml runner \
               --cloud=aws \
+              --labels=cml-runner \
               --cloud-region=eu-west \
               --cloud-type=t2.micro \
               --single
   train-model:
     needs: deploy-runner
-    runs-on: [self-hosted]
+    runs-on: [self-hosted, cml-runner]
     timeout-minutes: 120 # 2h
     container:
       image: docker://iterativeai/cml:0-dvc2-base1
