Provide basic readme

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,6 +34,7 @@ jobs:
         run: |
           cml ci
           pip install -r requirements.txt
+          python get_data.py
           python train.py
 
           # Create pull request
