Align workflow with version in blog

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,8 +7,8 @@ jobs:
   deploy-runner:
     runs-on: ubuntu-latest
     steps:
-      - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v2
+      - uses: iterative/setup-cml@v1
       - name: Deploy runner on EC2
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -19,15 +19,18 @@ jobs:
               --cloud=aws \
               --cloud-region=eu-west \
               --cloud-type=t2.micro \
+              --labels=cml-runner \
               --single
   train-model:
     needs: deploy-runner
-    runs-on: [self-hosted]
+    runs-on: [self-hosted, cml-runner]
     timeout-minutes: 120 # 2h
-    container:
-      image: docker://iterativeai/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - uses: iterative/setup-cml@v1
       - name: Train model
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -36,11 +39,3 @@ jobs:
           pip install -r requirements.txt
           python get_data.py
           python train.py
-
-          # Create pull request
-          cml pr model/random_forest.joblib
-
-          # Create CML report
-          cat model/metrics.txt > report.md
-          cml publish model/confusion_matrix.png --md >> report.md
-          cml send-comment --pr --update report.md
