--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -8,9 +8,8 @@ jobs:
   deploy-runner:
     runs-on: ubuntu-latest
     steps:
-      - uses: iterative/setup-dvc@v1
-      - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v2
+      - uses: iterative/setup-cml@v1
       - name: Deploy runner on EC2
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -19,25 +18,31 @@ jobs:
         run: |
           cml runner \
               --cloud=aws \
-              --labels=cml-runner \
               --cloud-region=eu-west \
               --cloud-type=t2.micro \
+              --labels=cml-runner \
               --single
   train-model:
     needs: deploy-runner
     runs-on: [self-hosted, cml-runner]
     timeout-minutes: 120 # 2h
-    container:
-      image: docker://iterativeai/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - uses: iterative/setup-cml@v1
       - name: Train model
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           cml ci
           pip install -r requirements.txt
+          # should this be `dvc exp run/repro`?
+          python get_data.py
           python train.py
 
           # Connect to your DVC remote storage and push the model to there
@@ -61,6 +66,6 @@ jobs:
           cml pr .
 
           # Create CML report
-          cat model/metrics.txt > model/report.md
-          cml publish model/confusion_matrix.png --md >> model/report.md
+          cat model/metrics.txt > report.md
+          cml publish model/confusion_matrix.png --md >> report.md
           cml send-comment --pr --update report.md
