--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Train model
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           cml ci
           pip install -r requirements.txt
@@ -48,13 +49,8 @@ jobs:
           # Connect to your DVC remote storage and push the model to there
           dvc add model/random_forest.joblib # This automatically adds the model to your .gitignore
 
-          # GDRIVE_CREDENTIALS_DATA is not read automatically when using a service account
-          # Manually write it to creds.json and read that file
-          echo -E '${{ secrets.GDRIVE_CREDENTIALS_DATA }}' > creds.json
-
           dvc remote add -d -f myremote gdrive://${{ secrets.GOOGLE_DRIVE_URI }}
           dvc remote modify myremote gdrive_use_service_account true
-          dvc remote modify myremote --local gdrive_service_account_json_file_path creds.json
 
           dvc push
 
