Revert "Change comment to prevent YARN formatting from breaking script in dvc.org"
This reverts commit c2a13579033c9ebb46712e3ca0f2334a5be28669.

--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -41,14 +41,13 @@ jobs:
         run: |
           cml ci
           pip install -r requirements.txt
-
+          
           python get_data.py
           python train.py
 
-          # This automatically adds the model to your .gitignore
-          dvc add model/random_forest.joblib
-
           # Connect to your DVC remote storage and push the model to there
+          dvc add model/random_forest.joblib # This automatically adds the model to your .gitignore
+
           dvc remote add -d -f myremote gdrive://${{ secrets.GOOGLE_DRIVE_URI }}
           dvc remote modify myremote gdrive_use_service_account true
 
