Simplify send-comment

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -50,4 +50,4 @@ jobs:
           # Create CML report
           cat model/metrics.txt > report.md
           cml publish model/confusion_matrix.png --md >> report.md
-          cml send-comment --commit-sha --pr --update report.md
+          cml send-comment --update report.md
