--- a/.github/workflows/cml-with-dvc.yaml
+++ b/.github/workflows/cml-with-dvc.yaml
@@ -59,4 +59,4 @@ jobs:
           # Create CML report
           cat model/metrics.txt > report.md
           cml publish model/confusion_matrix.png --md >> report.md
-          cml send-comment --pr --update report.md
+          cml send-comment --update report.md
