--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -49,4 +49,4 @@ jobs:
           # Create CML report
           cat model/metrics.txt > report.md
           cml publish model/confusion_matrix.png --md >> report.md
-          cml send-comment --update report.md
+          cml send-comment --commit-sha=HEAD --pr --update report.md
